<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login_facebook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_your_taxi_company"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:drawablePadding="20dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:inputType="text"
                android:layout_marginTop="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:inputType="phone"
                android:layout_marginTop="10dp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/view_clicked"/>

    </LinearLayout>

</LinearLayout>
