<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_icon_bg">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_shape"
                    android:hint="@string/name"
                    android:padding="15dp"
                    android:inputType="text"
                    android:drawableLeft="@drawable/ic_icon_user"
                    android:drawableStart="@drawable/ic_icon_user"
                    android:drawablePadding="20dp"/>

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_shape"
                    android:hint="@string/email"
                    android:padding="15dp"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/ic_icon_email"
                    android:drawableStart="@drawable/ic_icon_email"
                    android:drawablePadding="20dp"/>

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_shape"
                    android:hint="@string/phone_number"
                    android:padding="15dp"
                    android:inputType="phone"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/ic_icon_phone"
                    android:drawableStart="@drawable/ic_icon_phone"
                    android:drawablePadding="20dp"/>

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_shape"
                    android:hint="@string/password"
                    android:padding="15dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/ic_icon_lock"
                    android:drawableStart="@drawable/ic_icon_lock"
                    android:drawablePadding="20dp"/>

                <EditText
                    android:id="@+id/editConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_shape"
                    android:hint="@string/confirm_password"
                    android:padding="15dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/ic_icon_lock"
                    android:drawableStart="@drawable/ic_icon_lock"
                    android:drawablePadding="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <CheckBox
                        android:id="@+id/termsCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp">

                        <com.app.cabscout.model.custom.CustomTextViewRegular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_conditions"/>

                        <com.app.cabscout.model.custom.CustomTextViewRegular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_of_services"
                            android:textColor="#ff0000"/>

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <CheckBox
                        android:id="@+id/privacyCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp">

                        <com.app.cabscout.model.custom.CustomTextViewRegular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_conditions"/>

                        <com.app.cabscout.model.custom.CustomTextViewRegular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/privacy_policy"
                            android:textColor="#ff0000"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_margin="3dp"
                        android:src="@android:color/white"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_margin="3dp"
                        android:src="@android:color/black"/>

                </LinearLayout>

                <com.app.cabscout.model.custom.CustomTextViewRegular
                    android:id="@+id/textRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:padding="20dp"
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/view_clicked"/>

                <com.app.cabscout.model.custom.CustomTextViewRegular
                    android:id="@+id/alreadyAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_account"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    style="?borderlessButtonStyle"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <com.github.rahatarmanahmed.cpv.CircularProgressView
        android:id="@+id/progressView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:cpv_color="#ff0000"
        app:cpv_animAutostart="true"
        app:cpv_indeterminate="true"
        android:layout_centerInParent="true"/>

</RelativeLayout>