<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_cab_companies"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_icon_bg">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/selectCab"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CAB"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SCOUT"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="#ffffff" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:padding="10dp"
            android:text="@string/cabscout_description"/>

    </LinearLayout>

    <EditText
        android:id="@+id/selectCab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_your_taxi_company"
        android:textColorHint="@android:color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:inputType="text"
        android:textAllCaps="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:layout_centerInParent="true"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/round_shape"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="3dp"
                android:src="@android:color/black"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="3dp"
                android:src="@android:color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/next_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/view_clicked"/>

        <TextView
            android:id="@+id/alreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_account"
            android:textAllCaps="false"
            android:padding="10dp"
            style="?borderlessButtonStyle"/>

    </LinearLayout>

</RelativeLayout>
